2002-05-05  James Henstridge  <james@daa.com.au>

	* gtk/gtk.override (_wrap_gtk_tree_model_foreach): fix up foreach
	handler.
	(_wrap_gtk_tree_model_get_iter): change to take a single argument
	as the path, as discussed in bug 75811.

2002-05-04  James Henstridge  <james@daa.com.au>

	* Makefile.am (EXTRA_DIST): add extra files to dist (from bug
	#79872).

	* gtk/gtk.defs (set_from_pixmap): allow NULL pointer passed for
	mask.

	* gtk/gtk.override (pygtk_tree_foreach_marshal): pass model, path
	and iter to the callback.
	(_wrap_gtk_tree_model_foreach): implement.

2002-04-29  Matt Wilson  <msw@redhat.com>

	* codegen/argtypes.py (ULongArg): implemented an argtype to handle
	guint32 (on 32 bit platformas) and gulong arguments such that
	large values (>MAX_INT on 32 bit platforms) don't overflow.

2002-04-25  Matt Wilson  <msw@redhat.com>

	* gtk/gtk.defs (gtk_spin_button_new): s/gbutton/gdouble/ from Art Haas.

2002-04-25  James Henstridge  <james@daa.com.au>

	* codegen/argtypes.py (ArgMatcher.get): add hack to match
	GdkEvent* and use the GdkEvent handler.

	* gtk/gtk.override (_wrap_gtk_text_iter_get_char): remove wrapper,
	as arg type covers this case fine.

	* codegen/argtypes.py (GUniCharArg.write_return): add code for
	handling gunichar returns.
	(GUniCharArg.write_param): and support for gunichar parameters.

2002-04-23  James Henstridge  <james@daa.com.au>

	* gtk/gtk-types.c: remove old commented out GdkGC implementation.

2002-04-22  James Henstridge  <james@daa.com.au>

	* gtk/Makefile.am (EXTRA_DIST): same here.

	* Makefile.am (EXTRA_DIST): include windows make stuff.

	* gtk/gdk.override (_wrap_gdk_gc_tp_setattr): don't allow setting
	attributes on GdkGC instances.  Simplifies things a bit.

2002-04-21  Hans Breuer  <hans@breuer.org>

	* codegen/codegen.py : added parameter --errorfilename
	to allow redirection of stderr even with clumsy windoze
	shell

	* codegen/override.py : extended to allow 'sys.platform'
	specific ignores
