@@ -1,5 +1,7 @@
 2002-05-05  James Henstridge  <james@daa.com.au>
 
+	* gtk/compat.py: start of compatibility module.
+
 	* gtk/gtk.override (_wrap_gtk_tree_model_foreach): fix up foreach
 	handler.
 	(_wrap_gtk_tree_model_get_iter): change to take a single argument
